--- a/style.css
+++ b/style.css
@@ -168,5 +168,6 @@ footer {
     top: 30px;
      background-color: red;
     border: 3px solid blue;
-    padding: 3px 5px 3px 5px 
+    padding: 3px 5px 3px 5px;
+      text-decoration: none;
 }
