--- a/style.css
+++ b/style.css
@@ -175,6 +175,6 @@ footer {
     font-size: 36px;
 }
 p {
-    margin-right: 30px;
-    margin-left: 30;
+    margin-right: 100px;
+    margin-left: 100px;
 }
