--- a/style.css
+++ b/style.css
@@ -178,10 +178,25 @@ p {
     margin-right: 200px;
     margin-left: 200px;
 }
+nav::before {
+    content: url("https://i.pinimg.com/originals/1c/12/94/1c12948aae205024573b606130a0c9e3.jpg");
+        display: block;
+    opacity: 0;
+}
+nav:hover::before {
+    opacity: 1;
+}
 
-        
-    
-    
+
+
+
+
+
+
+
+
+
+
     
     
     
