--- a/style.css
+++ b/style.css
@@ -178,6 +178,38 @@ p {
     margin-right: 200px;
     margin-left: 200px;
 }
+table {
+    border: 3px solid red;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
