--- a/style.css
+++ b/style.css
@@ -179,9 +179,13 @@ p {
     margin-left: 200px;
 }
 table {
+        border-collapse: collapse;
     border: 3px solid red;
 }
-
+td {
+    padding: 10px;
+     border: 3px solid red;
+}   
 
 
 
