--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ table {
         border-collapse: collapse;
     border: 3px solid red;
 }
-td {
+tr {
     padding: 10px;
      border: 3px solid red;
 }   
