--- a/style.css
+++ b/style.css
@@ -181,10 +181,14 @@ p {
 table {
         border-collapse: collapse;
     border: 3px solid red;
+        text-align: center;
+
 }
 tr {
     padding: 10px;
      border: 3px solid red;
+        text-align: center;
+
 }   
 
 
