--- a/style.css
+++ b/style.css
@@ -190,7 +190,12 @@ tr {
     justify-content: center;
 
 }   
+.rf {
+        padding: 10px;
+     border: 3px solid red;
+    justify-content: center;
 
+}  
 
 
 
