--- a/style.css
+++ b/style.css
@@ -186,9 +186,8 @@ table {
 }
 tr {
     padding: 10px;
-     border: 3px solid red;
+     border: 3px solid green;
     justify-content: center;
-
 }   
   
 
