--- a/style.css
+++ b/style.css
@@ -186,7 +186,20 @@ tr {
      border: 3px solid green;
     justify-content: center;
 }   
-  
+  .rrrr {
+          text-decoration: none;
+    font-size: 20px;
+    padding: 10px;
+    border: 2px solid royalblue;
+    border-radius: 10px;
+    position: relative;
+    box-shadow: 0 5px 0 0 royalblue;
+}
+rrrr:focus {
+    box-shadow:inset 0 5px 0 2px royalblue;
+top: 10px;
+color: black;    
+}
 
 
 
